# cvc5-stubs

./: README.md  pyproject.toml
src/cvc5-stubs/: pythonic.pyi
